--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
 	"description": "A REST API project, part of Free Code Camp's curriculum",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
-		"dotenv": "^8.2.0",
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"mongodb": "^3.6.3",
+		"mongoose": "^5.11.9"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
@@ -18,5 +21,9 @@
 	"keywords": [
 		"node",
 		"express"
-	]
+	],
+	"devDependencies": {
+		"dotenv": "^8.2.0",
+		"nodemon": "^2.0.6"
+	}
 }
